--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -631,6 +631,10 @@ foreach(_scheduler ${HPX_WITH_THREAD_SCHEDULERS_UC})
     hpx_add_config_define(HPX_HAVE_STATIC_SCHEDULER)
     set(HPX_WITH_STATIC_SCHEDULER ON CACHE INTERNAL "")
   endif()
+  if(_scheduler STREQUAL "FFWD" OR _all)
+    hpx_add_config_define(HPX_HAVE_FFWD_SCHEDULER)
+    set(HPX_WITH_FFWD_SCHEDULER ON CACHE INTERNAL "")
+  endif()
   unset(_all)
 endforeach()
 
